# savion-tax-assistant

./: .env.example  README.md  app.py  main.py  pyproject.toml  report.html  requirements.txt  tax_rules.yaml  test_run.py
data/: sample_statement.csv
data/uploads/: 03b2d14e-0d28-48d3-a180-d8d2e3193318.csv  60d6442b-c1a5-4950-9644-de5ed19c10f9.csv
savion/: analysis.py  cli.py  llm_client.py  parser.py  recommendation.py  report.py  rules.py
savion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
savion/static/: style.css
templates/: report_template.html
tests/: test_analysis.py  test_parser.py  test_recommendation.py  test_run.py
